# AI_travel_planner_llmops_project.

./: .gitignore  app.py  pyproject.toml
src/chains/: itieneary_chains.py
src/config/: config.py
src/core/: planner.py
